--- a/frontend/src/app/managementportal/components/restaurant/tafels/tafels.component.html
+++ b/frontend/src/app/managementportal/components/restaurant/tafels/tafels.component.html
@@ -6,14 +6,14 @@
   <table class="table table-striped table-sm">
     <thead>
       <tr>
-        <th>Nummer</th>
+        <th>Kenmerk</th>
         <th>Personen</th>
         <th></th>
       </tr>
     </thead>
     <tbody>
       <tr *ngFor="let tafel of (tafels | async)">
-        <td>{{ tafel.nummer }}</td>
+        <td>{{ tafel.kenmerk }}</td>
         <td>{{ tafel.personen }}</td>
         <td class="text-right">
           <i class="fas fa-edit mr-2" placement="top" ngbTooltip="Wijzigen" (click)="openFormTafelModal(tafel)"></i>
