Cleaned some stuff

--- a/frontend/src/app/managementportal/components/kamers/kamers.component.html
+++ b/frontend/src/app/managementportal/components/kamers/kamers.component.html
@@ -3,24 +3,8 @@
   <br />
 
   <div class="row">
-    <div class="col-2">
-      <button type="button" class="btn btn-info" (click)="showAllRooms()">
-        All Rooms
-      </button>
-    </div>
-    <div class="col-2">
-      <button type="button" class="btn btn-success" (click)="showFreeRooms()">
-        Free Rooms
-      </button>
-    </div>
-
-    <div class="col-2">
-      <button type="button" class="btn btn-warning" (click)="showBookedRooms()">
-        Booked Rooms
-      </button>
-    </div>
-    <div class="col-6 text-right">
-        <button type="button" class="btn btn-primary" (click)="openNewFormModal()">Add Room</button>
+    <div class="col-12 text-right">
+        <button type="button" class="btn btn-primary" (click)="openNewFormModal()">Kamer toevoegen</button>
         <!--a href="/managementportal/kamers-form" class="btn btn-primary" role="button" aria-pressed="true">Add Room</a-->
       </div>
   </div>
