--- a/frontend/src/app/managementportal/components/kamers/kamers-form/form-kamerreservering/form-kamerreservering.component.html
+++ b/frontend/src/app/managementportal/components/kamers/kamers-form/form-kamerreservering/form-kamerreservering.component.html
@@ -1,76 +1,87 @@
 <div class="modal-header">
-  <h4 class="modal-title" id="modal-basic-title">Kamerreservering</h4>
+  <h4 class="modal-title" id="modal-basic-title">Kamerresevering --- <i>{{kamernaam}}</i></h4>
   <button type="button" class="close" aria-label="Close" (click)="activeModal.dismiss('cancel')">
     <span aria-hidden="true">&times;</span>
   </button>
 </div>
 <div class="modal-body">
   <form [formGroup]="kamerreserveringForm">
-    <div class="form-group">
-      <label>Voornaam</label>
-      <input type="text" class="form-control" formControlName="voornaam" [class.is-invalid]="kamerreserveringForm.controls.voornaam.invalid && kamerreserveringForm.controls.voornaam.touched" ngbAutofocus />
-      <small class="text-danger" [class.d-none]="kamerreserveringForm.controls.voornaam.valid || kamerreserveringForm.controls.voornaam.untouched">Vereist</small>
-    </div>
-    <div class="form-group">
-      <label>Achternaam</label>
-      <input type="text" class="form-control" formControlName="achternaam" [class.is-invalid]="kamerreserveringForm.controls.achternaam.invalid && kamerreserveringForm.controls.achternaam.touched" ngbAutofocus />
-      <small class="text-danger" [class.d-none]="kamerreserveringForm.controls.achternaam?.valid || kamerreserveringForm.controls.achternaam.untouched">Vereist</small>
-    </div>
-    <div class="form-group">
-      <label>Telefoonnummer</label>
-      <input type="text" class="form-control" formControlName="telefoonnummer" [class.is-invalid]="kamerreserveringForm.controls.telefoonnummer.invalid && kamerreserveringForm.controls.telefoonnummer.touched" ngbAutofocus />
-      <small class="text-danger" [class.d-none]="kamerreserveringForm.controls.telefoonnummer.valid || kamerreserveringForm.controls.telefoonnummer.untouched">Vereist</small>
-    </div>
-    <div class="form-group">
-      <label>E-mailadres</label>
-      <input type="text" class="form-control" formControlName="emailadres" [class.is-invalid]="kamerreserveringForm.controls.emailadres.invalid && kamerreserveringForm.controls.emailadres.touched" ngbAutofocus />
-      <small class="text-danger" [class.d-none]="kamerreserveringForm.controls.emailadres.valid || kamerreserveringForm.controls.emailadres.untouched">Vereist</small>
-    </div>
-    <div class="form-group">
+    <div class="row">
+      <div class="col-6 text-left">
+        <div class="form-group">
+        <label>Voornaam</label>
+        <input type="text" class="form-control" formControlName="voornaam" [class.is-invalid]="kamerreserveringForm.controls.voornaam.invalid && kamerreserveringForm.controls.voornaam.touched" ngbAutofocus />
+        <small class="text-danger" [class.d-none]="kamerreserveringForm.controls.voornaam.valid || kamerreserveringForm.controls.voornaam.untouched">Vereist</small>
+      </div>
+      <div class="form-group">
+        <label>Achternaam</label>
+        <input type="text" class="form-control" formControlName="achternaam" [class.is-invalid]="kamerreserveringForm.controls.achternaam.invalid && kamerreserveringForm.controls.achternaam.touched" ngbAutofocus />
+        <small class="text-danger" [class.d-none]="kamerreserveringForm.controls.achternaam?.valid || kamerreserveringForm.controls.achternaam.untouched">Vereist</small>
+      </div>
+      <div class="form-group">
+        <label>Telefoonnummer</label>
+        <input type="text" class="form-control" formControlName="telefoonnummer" [class.is-invalid]="kamerreserveringForm.controls.telefoonnummer.invalid && kamerreserveringForm.controls.telefoonnummer.touched" ngbAutofocus />
+        <small class="text-danger" [class.d-none]="kamerreserveringForm.controls.telefoonnummer.valid || kamerreserveringForm.controls.telefoonnummer.untouched">Vereist</small>
+      </div>
+      <div class="form-group">
+        <label>E-mailadres</label>
+        <input type="text" class="form-control" formControlName="emailadres" [class.is-invalid]="kamerreserveringForm.controls.emailadres.invalid && kamerreserveringForm.controls.emailadres.touched" ngbAutofocus />
+        <small class="text-danger" [class.d-none]="kamerreserveringForm.controls.emailadres.valid || kamerreserveringForm.controls.emailadres.untouched">Vereist</small>
+      </div>
+      <div class="form-group">
         <label>Indentiteit</label>
         <input type="text" class="form-control" formControlName="identiteitsid" [class.is-invalid]="kamerreserveringForm.controls.identiteitsid.invalid && kamerreserveringForm.controls.identiteitsid.touched" ngbAutofocus />
         <small class="text-danger" [class.d-none]="kamerreserveringForm.controls.identiteitsid.valid || kamerreserveringForm.controls.identiteitsid.untouched">Vereist</small>
       </div>
-    <div class="form-group">
-      <label>Straat</label>
-      <input type="text" class="form-control" formControlName="straat" [class.is-invalid]="kamerreserveringForm.controls.straat.invalid && kamerreserveringForm.controls.straat.touched" ngbAutofocus />
-      <small class="text-danger" [class.d-none]="kamerreserveringForm.controls.straat.valid || kamerreserveringForm.controls.straat.untouched">Vereist</small>
+      </div>
+      <div class="col-6 text-left">
+        <div class="form-group">
+          <label>Straat</label>
+          <input type="text" class="form-control" formControlName="straat" [class.is-invalid]="kamerreserveringForm.controls.straat.invalid && kamerreserveringForm.controls.straat.touched" ngbAutofocus />
+          <small class="text-danger" [class.d-none]="kamerreserveringForm.controls.straat.valid || kamerreserveringForm.controls.straat.untouched">Vereist</small>
+        </div>
+        <div class="form-group">
+          <label>Huisnummer</label>
+          <input type="text" class="form-control" formControlName="huisnummer" [class.is-invalid]="kamerreserveringForm.controls.huisnummer.invalid && kamerreserveringForm.controls.huisnummer.touched" ngbAutofocus />
+          <small class="text-danger" [class.d-none]="kamerreserveringForm.controls.huisnummer.valid || kamerreserveringForm.controls.huisnummer.untouched">Vereist</small>
+        </div>
+        <div class="form-group">
+          <label>Postcode</label>
+          <input type="text" class="form-control" formControlName="postcode" [class.is-invalid]="kamerreserveringForm.controls.postcode.invalid && kamerreserveringForm.controls.postcode.touched" ngbAutofocus />
+          <small class="text-danger" [class.d-none]="kamerreserveringForm.controls.postcode.valid || kamerreserveringForm.controls.postcode.untouched">Vereist</small>
+        </div>
+        <div class="form-group">
+          <label>Woonplaats</label>
+          <input type="text" class="form-control" formControlName="woonplaats" [class.is-invalid]="kamerreserveringForm.controls.woonplaats.invalid && kamerreserveringForm.controls.woonplaats.touched" ngbAutofocus />
+          <small class="text-danger" [class.d-none]="kamerreserveringForm.controls.woonplaats.valid || kamerreserveringForm.controls.woonplaats.untouched">Vereist</small>
+        </div>
+        <div class="form-group">
+          <label>Land</label>
+          <input type="text" class="form-control" formControlName="land" [class.is-invalid]="kamerreserveringForm.controls.land.invalid && kamerreserveringForm.controls.land.touched" ngbAutofocus />
+          <small class="text-danger" [class.d-none]="kamerreserveringForm.controls.land.valid || kamerreserveringForm.controls.land.untouched">Vereist</small>
+        </div>
+      </div>
     </div>
-    <div class="form-group">
-      <label>Huisnummer</label>
-      <input type="text" class="form-control" formControlName="huisnummer" [class.is-invalid]="kamerreserveringForm.controls.huisnummer.invalid && kamerreserveringForm.controls.huisnummer.touched" ngbAutofocus />
-      <small class="text-danger" [class.d-none]="kamerreserveringForm.controls.huisnummer.valid || kamerreserveringForm.controls.huisnummer.untouched">Vereist</small>
+
+    <div class="row">
+      <div class="col-6 text-left">
+        <div class="form-group">
+          <label>Aankomst datum</label>
+          <input type="date" class="form-control" formControlName="datumvan" [class.is-invalid]="kamerreserveringForm.controls.datumvan.invalid && kamerreserveringForm.controls.datumvan.touched" ngbAutofocus />
+          <small class="text-danger" [class.d-none]="kamerreserveringForm.controls.datumvan.valid || kamerreserveringForm.controls.datumvan.untouched">Vereist</small>
+        </div>
+      </div>
+      <div class="col-6 text-left">
+        <div class="form-group">
+          <label>Vertrek datum</label>
+          <input type="date" class="form-control" formControlName="datumtot" [class.is-invalid]="kamerreserveringForm.controls.datumtot.invalid && kamerreserveringForm.controls.datumtot.touched" ngbAutofocus />
+          <small class="text-danger" [class.d-none]="kamerreserveringForm.controls.datumtot.valid || kamerreserveringForm.controls.datumtot.untouched">Vereist</small>
+        </div>
+      </div>
     </div>
+
     <div class="form-group">
-      <label>Postcode</label>
-      <input type="text" class="form-control" formControlName="postcode" [class.is-invalid]="kamerreserveringForm.controls.postcode.invalid && kamerreserveringForm.controls.postcode.touched" ngbAutofocus />
-      <small class="text-danger" [class.d-none]="kamerreserveringForm.controls.postcode.valid || kamerreserveringForm.controls.postcode.untouched">Vereist</small>
-    </div>
-    <div class="form-group">
-      <label>Woonplaats</label>
-      <input type="text" class="form-control" formControlName="woonplaats" [class.is-invalid]="kamerreserveringForm.controls.woonplaats.invalid && kamerreserveringForm.controls.woonplaats.touched" ngbAutofocus />
-      <small class="text-danger" [class.d-none]="kamerreserveringForm.controls.woonplaats.valid || kamerreserveringForm.controls.woonplaats.untouched">Vereist</small>
-    </div>
-    <div class="form-group">
-      <label>Land</label>
-      <input type="text" class="form-control" formControlName="land" [class.is-invalid]="kamerreserveringForm.controls.land.invalid && kamerreserveringForm.controls.land.touched" ngbAutofocus />
-      <small class="text-danger" [class.d-none]="kamerreserveringForm.controls.land.valid || kamerreserveringForm.controls.land.untouched">Vereist</small>
-    </div>
-    <div class="form-group">
-      <label>Aankomst datum</label>
-      <input type="text" class="form-control" formControlName="datumvan" [class.is-invalid]="kamerreserveringForm.controls.datumvan.invalid && kamerreserveringForm.controls.datumvan.touched" ngbAutofocus />
-      <small class="text-danger" [class.d-none]="kamerreserveringForm.controls.datumvan.valid || kamerreserveringForm.controls.datumvan.untouched">Vereist</small>
-    </div>
-    <div class="form-group">
-      <label>Vertrek datum</label>
-      <input type="text" class="form-control" formControlName="datumtot" [class.is-invalid]="kamerreserveringForm.controls.datumtot.invalid && kamerreserveringForm.controls.datumtot.touched" ngbAutofocus />
-      <small class="text-danger" [class.d-none]="kamerreserveringForm.controls.datumtot.valid || kamerreserveringForm.controls.datumtot.untouched">Vereist</small>
-    </div>
-    <div class="form-group">
-      <label>Kamernaam</label>
-      <input type="text" class="form-control" value="{{kamernaam}}" formControlName="kamernaam" [class.is-invalid]="kamerreserveringForm.controls.kamernaam.invalid && kamerreserveringForm.controls.kamernaam.touched" ngbAutofocus />
-      <small class="text-danger" [class.d-none]="kamerreserveringForm.controls.kamernaam.valid || kamerreserveringForm.controls.kamernaam.untouched">Vereist</small>
-      <!--input readonly type="text" class="form-control" value="{{kamernaam}}" formControlName="kamernaam" /-->
+      <input type="hidden" class="form-control" value="{{kamernaam}}" formControlName="kamernaam">
 
     </div>
   </form>
