--- a/frontend/src/app/shared/components/form-gerecht/form-gerecht.component.html
+++ b/frontend/src/app/shared/components/form-gerecht/form-gerecht.component.html
@@ -1,5 +1,5 @@
 <div class="modal-header">
-  <h4 class="modal-title" id="modal-basic-title">Tafel</h4>
+  <h4 class="modal-title" id="modal-basic-title">Gerecht</h4>
   <button type="button" class="close" aria-label="Close" (click)="activeModal.dismiss('cancel')">
     <span aria-hidden="true">&times;</span>
   </button>
