post services fe

--- a/frontend/src/app/shared/components/form-activiteit/form-activiteit.component.html
+++ b/frontend/src/app/shared/components/form-activiteit/form-activiteit.component.html
@@ -30,7 +30,7 @@
     <div class="form-group">
       <label>Datum</label>
       <input
-        type="string"
+        type="number"
         class="form-control"
         formControlName="datum"
         [class.is-invalid]="datum?.invalid && datum?.touched"
