--- a/frontend/src/app/managementportal/components/activiteiten/activiteiten.component.html
+++ b/frontend/src/app/managementportal/components/activiteiten/activiteiten.component.html
@@ -1,5 +1,7 @@
 <div class="d-flex justify-content-end mt-2">
-  <button class="btn btn-primary mt-2" (click)="openFormActiviteitModal()">Toevoegen nieuwe activiteit</button>
+  <button class="btn btn-primary mt-2" (click)="openFormActiviteitModal()">
+    Toevoegen nieuwe activiteit
+  </button>
 </div>
 
 <div class="table-responsive mt-2">
