Cleaned some stuff

--- a/frontend/src/app/managementportal/components/kamers/kamers.component.html
+++ b/frontend/src/app/managementportal/components/kamers/kamers.component.html
@@ -57,7 +57,7 @@
       </form>
     </div>
     <div class="modal-footer">
-      <button type="button" class="btn btn btn-success" (click)="deleteRoom(selectedKamer); modal.close('Save click')">Ja</button>
-      <button type="button" class="btn btn-outline-dark" (click)="modal.close('Save click')">Nee</button>
+      <button type="button" class="btn btn-danger" (click)="modal.close('Save click')">Nee</button>
+      <button type="button" class="btn btn-success" (click)="deleteRoom(selectedKamer); modal.close('Save click')">Ja</button>
     </div>
   </ng-template>
