implemented add delete and subject in restaurant

--- a/frontend/src/app/managementportal/components/restaurant/reserveringen/reserveringen.component.html
+++ b/frontend/src/app/managementportal/components/restaurant/reserveringen/reserveringen.component.html
@@ -14,7 +14,7 @@
     </tr>
   </thead>
   <tbody>
-    <tr *ngFor="let reservering of (reserveringen | async)">
+    <tr *ngFor="let reservering of (reserveringen$ | async)">
       <td>{{ reservering.aanvangstijd }}</td>
       <td>{{ reservering.personen }}</td>
       <td>{{ reservering.naam }}</td>
