--- a/frontend/src/app/managementportal/components/restaurant/gerechten/gerechten.component.html
+++ b/frontend/src/app/managementportal/components/restaurant/gerechten/gerechten.component.html
@@ -14,7 +14,7 @@
       </tr>
     </thead>
     <tbody>
-      <tr *ngFor="let gerecht of (gerechten | async)">
+      <tr *ngFor="let gerecht of (gerechten$ | async)">
         <td>{{gerecht.naam}}</td>
         <td>{{gerecht.type}}</td>
         <td>{{gerecht.subtype}}</td>
