--- a/frontend/src/app/managementportal/components/restaurant/ingredienten/ingredienten.component.html
+++ b/frontend/src/app/managementportal/components/restaurant/ingredienten/ingredienten.component.html
@@ -13,7 +13,7 @@
       </tr>
     </thead>
     <tbody>
-      <tr *ngFor="let ingredient of (ingredienten | async)">
+      <tr *ngFor="let ingredient of (ingredienten$ | async)">
         <td>{{ingredient.naam}}</td>
         <td>{{ingredient.eenheid}}</td>
         <td>{{ingredient.prijs | currency: 'EUR'}}</td>
