--- a/frontend/src/app/shared/components/form-gerecht/form-gerecht.component.html
+++ b/frontend/src/app/shared/components/form-gerecht/form-gerecht.component.html
@@ -14,23 +14,23 @@
     <div class="form-group">
       <label>Type</label>
       <select class="form-control" formControlName="type" [class.is-invalid]="type?.invalid && type?.touched">
-        <option>Voorgerecht</option>
-        <option>Hoofdgerecht</option>
-        <option>Nagerecht</option>
-        <option>Drank</option>
+        <option>voorgerecht</option>
+        <option>hoofdgerecht</option>
+        <option>nagerecht</option>
+        <option>drank</option>
       </select>
       <small class="text-danger" [class.d-none]="type?.valid || type?.untouched">Vereist</small>
     </div>
     <div class="form-group">
       <label>Subtype</label>
       <select class="form-control" formControlName="subtype" [class.is-invalid]="subtype?.invalid && subtype?.touched">
-        <option>Koud</option>
-        <option>Vlees</option>
-        <option>Vis</option>
-        <option>IJs</option>
-        <option>Alcohol</option>
-        <option>Fris</option>
-        <option>Overig</option>
+        <option>koud</option>
+        <option>vlees</option>
+        <option>vis</option>
+        <option>ijs</option>
+        <option>alcohol</option>
+        <option>fris</option>
+        <option>overig</option>
       </select>
       <small class="text-danger" [class.d-none]="subtype?.valid || subtype?.untouched">Vereist</small>
     </div>
