--- a/frontend/src/app/managementportal/components/restaurant/gerechten/gerechten.component.html
+++ b/frontend/src/app/managementportal/components/restaurant/gerechten/gerechten.component.html
@@ -6,15 +6,15 @@
   <table class="table table-striped table-sm">
     <thead>
       <tr>
-        <th>Naam</th>
-        <th>Type</th>
-        <th>SubType</th>
+        <th class="handCursor" (click)="clickColumnHandler('naam')">Naam</th>
+        <th class="handCursor" (click)="clickColumnHandler('type')"h>Type</th>
+        <th class="handCursor" (click)="clickColumnHandler('subtype')">SubType</th>
         <th>Prijs</th>
         <th></th>
       </tr>
     </thead>
     <tbody>
-      <tr *ngFor="let gerecht of (gerechten | async)">
+      <tr *ngFor="let gerecht of (gerechten | async | sortgrid:field)">
         <td>{{gerecht.naam}}</td>
         <td>{{gerecht.type}}</td>
         <td>{{gerecht.subtype}}</td>
