--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -92,3 +92,28 @@ header {
   color: grey;
 }
 
+  /*
+  column header ordering /sort
+  */
+
+  .handCursor {
+    cursor: pointer;
+  }
+
+  .arrow-up {
+    width: 0;
+    height: 0;
+    border-left: 5px solid transparent;
+    border-right: 5px solid transparent;
+    border-bottom: 10px solid black;
+    display: inline-block;
+  }
+
+  .arrow-up {
+    width: 0;
+    height: 0;
+    border-left: 5px solid transparent;
+    border-right: 5px solid transparent;
+    border-bottom: 10px solid black;
+    display: inline-block;
+  }
