--- a/frontend/src/app/managementportal/components/kamers/kamers-form/form-kamerreserveringdetails/form-kamerreserveringdetails.component.html
+++ b/frontend/src/app/managementportal/components/kamers/kamers-form/form-kamerreserveringdetails/form-kamerreserveringdetails.component.html
@@ -1,5 +1,5 @@
 <div class="modal-header">
-  <h4 class="modal-title" id="modal-basic-title">Kamerreseveringdetails- <i>{{kamerReservering.kamernaam}}</i></h4>
+  <h4 class="modal-title" id="modal-basic-title">Kamerreseveringdetails- <i>{{kamerReservering?.kamernaam}}</i></h4>
   <button type="button" class="close" aria-label="Close" (click)="activeModal.dismiss('cancel')">
     <span aria-hidden="true">&times;</span>
   </button>
@@ -9,62 +9,62 @@
     <div class="container, form-row">
       <div class="form-group col-md-6">
         <label>Aankomst datum</label>
-        <input readonly type="date" class="form-control" formControlName="datumvan" value="{{kamerReservering.datumvan}}"/>
+        <input readonly type="date" class="form-control" formControlName="datumvan" value="{{kamerReservering?.datumvan}}"/>
       </div>
       <div class="form-group col-md-6">
         <label>Vertrek datum</label>
-        <input readonly type="date" class="form-control" formControlName="datumtot" value="{{kamerReservering.datumtot}}"/>
+        <input readonly type="date" class="form-control" formControlName="datumtot" value="{{kamerReservering?.datumtot}}"/>
       </div>
     </div>
     <div class="container, form-row">
       <div class="form-group col-md-6">
         <label>Voornaam</label>
-        <input readonly type="text" class="form-control" formControlName="voornaam" value="{{kamerReservering.voornaam}}"/>
+        <input readonly type="text" class="form-control" formControlName="voornaam" value="{{kamerReservering?.voornaam}}"/>
       </div>
       <div class="form-group col-md-6">
         <label>Achternaam</label>
-        <input readonly type="text" class="form-control" formControlName="achternaam" value="{{kamerReservering.achternaam}}"/>
+        <input readonly type="text" class="form-control" formControlName="achternaam" value="{{kamerReservering?.achternaam}}"/>
       </div>
     </div>
     <div class="container, form-row">
       <div class="form-group col-md-6">
         <label>Telefoonnummer</label>
-        <input readonly type="text" class="form-control" formControlName="telefoonnummer" value="{{kamerReservering.telefoonnummer}}"/>
+        <input readonly type="text" class="form-control" formControlName="telefoonnummer" value="{{kamerReservering?.telefoonnummer}}"/>
       </div>
       <div class="form-group col-md-6">
         <label>E-mailadres</label>
-        <input readonly type="text" class="form-control" formControlName="emailadres" value="{{kamerReservering.emailadres}}"/>
+        <input readonly type="text" class="form-control" formControlName="emailadres" value="{{kamerReservering?.emailadres}}"/>
       </div>
     </div>
     <div class="container, form-row">
       <div class="form-group col-md-8">
         <label>Straat</label>
-        <input readonly type="text" class="form-control" formControlName="straat" value="{{kamerReservering.straat}}"/>
+        <input readonly type="text" class="form-control" formControlName="straat" value="{{kamerReservering?.straat}}"/>
       </div>
       <div class="form-group col-md-2">
         <label>Nummer</label>
-        <input readonly type="text" class="form-control" formControlName="huisnummer" value="{{kamerReservering.huisnummer}}"/>
+        <input readonly type="text" class="form-control" formControlName="huisnummer" value="{{kamerReservering?.huisnummer}}"/>
       </div>
       <div class="form-group col-md-2">
         <label>Postcode</label>
-        <input readonly type="text" class="form-control" formControlName="postcode" value="{{kamerReservering.postcode}}"/>
+        <input readonly type="text" class="form-control" formControlName="postcode" value="{{kamerReservering?.postcode}}"/>
       </div>
     </div>
     <div class="container, form-row">
       <div class="form-group col-md-6">
         <label>Woonplaats</label>
-        <input readonly type="text" class="form-control" formControlName="woonplaats" value="{{kamerReservering.woonplaats}}"/>
+        <input readonly type="text" class="form-control" formControlName="woonplaats" value="{{kamerReservering?.woonplaats}}"/>
       </div>
       <div class="form-group col-md-6">
         <label>Land</label>
-        <input readonly type="text" class="form-control"  formControlName="land" value="{{kamerReservering.land}}"/>
+        <input readonly type="text" class="form-control"  formControlName="land" value="{{kamerReservering?.land}}"/>
       </div>
     </div>
 
 
     <div class="form-group">
       <label>Document nummer (paspoort, rijbewijs, ID)</label>
-      <input readonly type="text" class="form-control" formControlName="identiteitsid" value="{{kamerReservering.identiteitsid}}"/>
+      <input readonly type="text" class="form-control" formControlName="identiteitsid" value="{{kamerReservering?.identiteitsid}}"/>
     </div>
   </form>
   <div class="modal-footer">
