--- a/frontend/src/app/frontend/components/activiteiten/activiteiten.component.html
+++ b/frontend/src/app/frontend/components/activiteiten/activiteiten.component.html
@@ -25,7 +25,7 @@
       <tr>
         <th></th>
         <th>Activiteit</th>
-        <th>Datum</th>
+       <th>Actie</th>
         <th>Prijs</th>
         <th>Capaciteit</th>
         <th></th>
@@ -39,13 +39,14 @@
           {{ activiteit.beschrijving }}
         </td>
         <td>
-          {{ activiteit.datum }}<br/><br/>
+<!--          {{ activiteit.datum }}<br/><br/>
+-->
           <p>
             <button
               type="button"
               class="btn btn-primary btn-block btn-primary movelake"
             >
-              Aanmelden
+              Info en aanmelden
             </button>
           </p>
         </td>
