reserveren door gasten

--- a/frontend/src/app/frontend/components/restaurant/restaurant.component.html
+++ b/frontend/src/app/frontend/components/restaurant/restaurant.component.html
@@ -14,7 +14,7 @@
             warmte bij de openhaard in de bar of 1 van de mooie wildgerechten in ons sfeervolle
             restaurant. Welkom!</p>
           <p>
-            <button class="btn btn-lg btn-primary" (click)="open(modalReservation)">Reserveer</button>
+            <button class="btn btn-lg btn-primary" (click)="openFormTafelreserveringModal()">Reserveer</button>
           </p>
         </div>
       </ng-template>
@@ -29,7 +29,7 @@
             warmte bij de openhaard in de bar of 1 van de mooie wildgerechten in ons sfeervolle
             restaurant. Welkom!</p>
           <p>
-            <button class="btn btn-lg btn-primary" (click)="open(modalReservation)">Reserveer</button>
+            <button class="btn btn-lg btn-primary" (click)="openFormTafelreserveringModal()">Reserveer</button>
           </p>
         </div>
       </ng-template>
@@ -44,7 +44,7 @@
             warmte bij de openhaard in de bar of 1 van de mooie wildgerechten in ons sfeervolle
             restaurant. Welkom!</p>
           <p>
-            <button class="btn btn-lg btn-primary" (click)="open(modalReservation)">Reserveer</button>
+            <button class="btn btn-lg btn-primary" (click)="openFormTafelreserveringModal()">Reserveer</button>
           </p>
         </div>
       </ng-template>
