--- a/frontend/src/app/shared/components/form-tafelreservering/form-tafelreservering.component.html
+++ b/frontend/src/app/shared/components/form-tafelreservering/form-tafelreservering.component.html
@@ -7,48 +7,47 @@
 <div class="modal-body">
   <form [formGroup]="tafelreserveringForm">
     <div class="form-group">
-      <label>Aanvangstijd</label>
-      <input
-        type="datetime-local"
-        class="form-control"
-        formControlName="aanvangstijd"
-        [class.is-invalid]="aanvangstijd?.invalid && aanvangstijd?.touched"
-        ngbAutofocus
-      />
-      <small class="text-danger" [class.d-none]="aanvangstijd?.valid || aanvangstijd?.untouched">Vereist</small>
+      <label>Aanvang</label>
+      <div class="row d-flex align-items-center">
+        <div class="col">
+          <div class="input-group">
+            <input class="form-control" placeholder="yyyy-mm-dd" name="dp" formControlName="aanvangsdatum" ngbDatepicker
+              #d="ngbDatepicker" [class.is-invalid]="aanvangstijd?.invalid && aanvangstijd?.touched" ngbAutofocus
+              [minDate]="currentDate">
+            <div class="input-group-append">
+              <button class="btn btn-outline-secondary calendar" (click)="d.toggle()" type="button"></button>
+            </div>
+          </div>
+          <small class="text-danger" [class.d-none]="aanvangstijd?.valid || aanvangstijd?.untouched">Vereist</small>
+        </div>
+        <div class="col">
+          <ngb-timepicker formControlName="aanvangstijd" [minuteStep]="15" [readonlyInputs]="true"></ngb-timepicker>
+          <small class="text-danger" [class.d-none]="aanvangstijd?.valid || aanvangstijd?.untouched">Vereist</small>
+        </div>
+      </div>
     </div>
     <div class="form-group">
       <label>Aantal Personen</label>
-      <input
-        type="number"
-        class="form-control"
-        formControlName="personen"
-        [class.is-invalid]="personen?.invalid && personen?.touched"
-      />
-      <small class="text-danger" [class.d-none]="personen?.valid || personen?.untouched">minimaal 1 en maximaal 40</small>
+      <input type="number" class="form-control" formControlName="personen"
+        [class.is-invalid]="personen?.invalid && personen?.touched" />
+      <small class="text-danger" [class.d-none]="personen?.valid || personen?.untouched">minimaal 1 en maximaal
+        40</small>
     </div>
     <div class="form-group">
       <label>Naam</label>
-      <input
-        type="text"
-        class="form-control"
-        formControlName="naam"
-        [class.is-invalid]="naam?.invalid && naam?.touched"
-      />
+      <input type="text" class="form-control" formControlName="naam"
+        [class.is-invalid]="naam?.invalid && naam?.touched" />
       <small class="text-danger" [class.d-none]="naam?.valid || naam?.untouched">Vereist</small>
     </div>
     <div class="form-group">
       <label>Telefoon</label>
-      <input
-        type="text"
-        class="form-control"
-        formControlName="telefoon"
-        [class.is-invalid]="telefoon?.invalid && telefoon?.touched"
-      />
+      <input type="text" class="form-control" formControlName="telefoon"
+        [class.is-invalid]="telefoon?.invalid && telefoon?.touched" />
       <small class="text-danger" [class.d-none]="telefoon?.valid || telefoon?.untouched">Vereist</small>
     </div>
   </form>
   <div class="modal-footer">
-    <button type="button" class="btn btn-success" (click)="submitForm()" [disabled]="tafelreserveringForm.invalid">Save</button>
+    <button type="button" class="btn btn-success" (click)="submitForm()"
+      [disabled]="tafelreserveringForm.invalid">Save</button>
   </div>
 </div>
