--- a/frontend/src/app/managementportal/components/kamers/kamers.component.html
+++ b/frontend/src/app/managementportal/components/kamers/kamers.component.html
@@ -10,21 +10,22 @@
   </div>
 
   <br />
-  <table class="table table-striped table-sm">
+
+ <table>
     <thead>
       <tr>
-        <th>Kamernaam</th>
-        <th>Kamertype</th>
-        <th>Kamerligging</th>
-        <th>Aantalpersonen</th>
-        <th>Prijs</th>
+        <th (click)="clickColumnHandler('kamerNaam')">Kamernaam</th>
+        <th (click)="clickColumnHandler('kamerType')">Kamertype</th>
+        <th (click)="clickColumnHandler('kamerLigging')">Kamerligging</th>
+        <th (click)="clickColumnHandler('aantalPersonen')">Aantalpersonen</th>
+        <th (click)="clickColumnHandler('prijs')">Prijs</th>
         <th></th>
         <th></th>
         <th></th>
       </tr>
     </thead>
     <tbody>
-      <tr *ngFor="let kamer of (kamers | kamersfilter: show)">
+      <tr *ngFor="let kamer of (kamers | kamersfilter: show | sortgrid:field)">
         <td>{{ kamer.kamerNaam }}</td>
         <td>{{ kamer.kamerType }}</td>
         <td>{{ kamer.kamerLigging }}</td>
@@ -40,6 +41,10 @@
       </tr>
     </tbody>
   </table>
+
+
+
+
 </div>
 <!-- Modal to confirm deleting room-->
 <ng-template #deleteModal let-modal>
