Cleaned some stuff

--- a/frontend/src/app/managementportal/components/kamers/kamers-form/form-kamersbeschikbaar/form-kamersbeschikbaar.component.html
+++ b/frontend/src/app/managementportal/components/kamers/kamers-form/form-kamersbeschikbaar/form-kamersbeschikbaar.component.html
@@ -34,6 +34,6 @@
       </div>
     </form>
     <div class="modal-footer">
-      <button type="button" class="btn btn-success" (click)="submitForm()" [disabled]="kamerSearchForm.invalid">Save</button>
+      <button type="button" class="btn btn-success" (click)="submitForm()" [disabled]="kamerSearchForm.invalid">Zoeken</button>
     </div>
   </div>
